# projem

./: .env.example  .gitignore  CLAUDE.md  GITHUB_SETUP.md  MCP_SETUP_GUIDE.md  Makefile  README.md  RUNBOOK.md  SETUP_AI_SECRETS.md  add-github-mcp.bat  create-github-repo.md  create-pr-script.bat  create-pr.md  create-pr.py  docker-compose.prod.yml  docker-compose.yml  mcp-config-example.json  mcp-config-freecad.json  mcp-docker-setup.md  payload.json  setup-mcp-servers.bat  test-ai-review.py
apps/api/: .coverage  .coveragerc  Dockerfile  Dockerfile.freecad  README.md  alembic.ini  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  start.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py  0002_jobs_extend.py  0003_jobs_task_id.py  0004_dead_jobs.py  0005_jobs_idempotency_unique.py  0006_design_fields.py  0007_projects_qna.py  0008_cutting_data.py  0009_tooling_and_reports.py  0010_m18_multi_setup.py
apps/api/app/: audit.py  auth.py  config.py  db.py  events.py  instrumentation.py  llm.py  llm_router.py  logging_setup.py  main.py  metrics.py  middleware.py  models.py  models_cutting.py  models_project.py  models_tooling.py  sentry_setup.py  settings.py  storage.py  storage_download.py  test_review.py
apps/api/app/cam/: cam_plan.py
apps/api/app/freecad/: cad_build.py  export_views.py  generate.py  m18_builder.py  path_build.py  path_job.py  path_post.py  script_host.py  (+3 more)
apps/api/fixtures/: cutting_data.json  fixtures.json  tools.json
apps/api/freecad_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_health.py
(+183 files in other folders)
